@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2725</build>
+	<build>Build 2726</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>27.03.2007 - 20:10</release_date>
+	<release_date>01.04.2007 - 21:44</release_date>
 	<toenda_copyright>2003 - 2007</toenda_copyright>
 </version>
