@@ -28,6 +28,54 @@
 
 ############################################################################################
 #
+# VERSION 1.5.4
+#
+############################################################################################
+
+**************************
+* ADD THIS
+*
+
+if(!defined('_MSG_NO_ALBUM_WITH_THIS_ID'))     define('_MSG_NO_ALBUM_WITH_THIS_ID', 'The System dont have found a album with this ID!');
+
+*
+*
+**************************
+
+
+**************************
+* CHANGE THIS
+*
+
+this:
+
+...
+
+to:
+
+...
+
+*
+*
+**************************
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+############################################################################################
+#
 # VERSION 1.5.0
 #
 ############################################################################################
@@ -113,12 +161,6 @@ if(!defined('_FOOTER_VALID_ANY_BROWSER'))      define('_FOOTER_VALID_ANY_BROWSER
 **************************
 
 
-
-
-
-
-
-
 **************************
 * CHANGE THIS
 *
@@ -170,12 +212,6 @@ if(!defined('_MSG_SEND_FAILED'))               define('_MSG_SEND_FAILED', 'Error
 *
 *
 **************************
-
-
-
-
-
-
 
 
 **************************
@@ -230,12 +266,6 @@ if(!defined('_EXT_NEWS_NEWS_SPACING'))         define('_EXT_NEWS_NEWS_SPACING', 
 *
 *
 **************************
-
-
-
-
-
-
 
 
 **************************
@@ -437,12 +467,6 @@ define('_PERSON_SKYPE', 'Skype');
 **************************
 
 
-
-
-
-
-
-
 **************************
 * CHANGE THIS
 *
@@ -566,12 +590,6 @@ define('_SIDEEXT_MODUL', 'Modules');
 *
 *
 **************************
-
-
-
-
-
-
 
 
 **************************
@@ -700,12 +718,6 @@ define('_EXT_NEWS_DEFAULT_FEED', 'Default syndication feed');
 *
 *
 **************************
-
-
-
-
-
-
 
 
 **************************
